--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -275,6 +275,178 @@
     padding: 12px;
     color: white;
 }
+.header__icon--search{
+    opacity: 0.7;
+    margin-left: 10px;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+}
+
+/* Estilo barra de busqueda */
+.search--bar {
+    display: flex;
+    margin-top: 15px;
+    list-style-type: none;
+
+    gap: 0.5rem;
+}
+
+/* Detail product */
+.product-detail {
+    display: flex;
+    width: 90%;
+    max-width: 1110px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.product-images {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.main-image {
+    width: 90%;
+    max-width: 500px;
+    height: auto;
+}
+
+.small-images {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.small-images img {
+    width: 100px;
+    height: auto;
+    margin: 0 5px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.small-images img:hover {
+    transform: scale(1.1);
+}
+
+.product-info {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.product-title {
+    font-size: 28px;
+    color: #333;
+    margin: 0 0 21px;
+}
+
+.product-description {
+    font-size: 13px;
+    color: #666;
+    margin: 0 0 30px 15px;
+    line-height: 1.5;
+}
+.product-description--tittle{
+    font-size: 15px;
+    color: #666;
+    margin: 0 0 30px;
+    line-height: 1.5;
+    font-weight: 600;
+}
+.product-description--detail{
+    font-size: 15px;
+    color: #666;
+    margin: 0 0 30px;
+    line-height: 1.5;
+    margin-left: 6px;
+}
+
+.buy--button {
+    display: inline-block;
+    width: 100%;
+    padding: 15px 30px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #819F54;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 300ms;
+}
+
+.buy--button:hover {
+    background-color: #344C2A;
+}
+.buy--button--cart {
+    display: inline-block;
+    width: 100%;
+    padding: 15px 30px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #819F54;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 300ms;
+}
+
+.buy--button--cart:hover {
+    background-color: #344C2A;
+}
+
+.product--flex{
+    display: flex;
+}
+
+.product__detail--description {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 6px;
+}
+
+.search__bar--form {
+    display: flex;
+    align-items: center;
+}
+
+.search__bar--input {
+    padding: 8px 12px;
+    border: 1px solid #ced4da;
+    border-radius: 4px 0 0 4px;
+    outline: none;
+    font-size: 12px;
+    width: 180px;
+}
+
+.search__bar--button {
+    background-color: #ced4da;
+    border: none;
+    border-radius: 0 4px 4px 0;
+    padding: 8px 12px;
+    cursor: pointer;
+    height: 31px;
+}
+
+.search__bar--button i {
+    height: 13px;
+    width: 15px;
+    filter: invert(1); /* Cambia vcolor del icono */
+}
+
+.search__bar--button:hover {
+    background-color: #95999d;
+}
+/* Fin Estilo barra de busqueda */
+
+
 
 .main__buttons--login {
     width: 100%;
@@ -425,10 +597,19 @@
     margin-top: 21px;
     font-size: 16px;   
 }
-
+.nav--option, .nav--login{
+    margin-top: 15px;
+}
+.border{
+    border-bottom: 3px solid #ccc;
+    margin-top: 18px;    
+}
 
 /* Media Query */
 @media screen and (max-width:490px) {
+    .search__bar--input {
+        width: 130px;
+    }
     .header__nav--menu{
         display: flex;
         visibility: hidden;
@@ -481,7 +662,6 @@
 }
 
 @media(min-width:490px) {
-  
     .header__nav--menu{
         display: flex;
         justify-content: space-between;
@@ -521,6 +701,11 @@
     .max--width{
         max-width: 1110px;
         margin: 0 auto;
+    }
+    .border{
+        max-width: 1110px;
+        margin: 0 auto;
+        margin-top: 18px;
     }
     .footer__article {
         max-width: 1200px;
