--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -95,7 +95,7 @@
             <br>
             <div class="main--buttons">
                 <button type="submit" class="main__buttons--products">Modificar</button>
-                <a class="product--butt" href="/admin/">Cancelar</a>
+                <a class="product--butt" href="/admin">Cancelar</a>
             </div>
             
         </form>
