--- a/src/views/products/productSearch.ejs
+++ b/src/views/products/productSearch.ejs
@@ -12,7 +12,7 @@
 <body>
     <%- include('../partials/header.ejs') %>
     
-     
+    <main class="main--form">
 		<section class="main--section">
             <h3 class="main--titulares">Resultado Busqueda</h3>
 			<% if (productos.length > 0) { %>  
