--- a/src/views/products/productsAdmin.ejs
+++ b/src/views/products/productsAdmin.ejs
@@ -17,7 +17,7 @@
         
         <!-- ALL PRODUCTS -->
                     
-        <li class="main__form--inputs" type="none" > <a class="main__input--desc" href="/products/index"> Todos los Productos</a> </li>
+        <li class="main__form--inputs" type="none" > <a class="main__input--desc" href="admin/index">Listado de todos los Productos</a> </li>
         
         <!-- NEW PRODUCTS -->
         <li  class="main__form--inputs" type="none"  > <a class="main__input--desc" href="/admin/create"> Crear Producto</a> </li>
