--- a/src/views/products/productDelete.ejs
+++ b/src/views/products/productDelete.ejs
@@ -61,7 +61,7 @@
             <br>
             <div class="main--buttons">
                 <button type="submit" class="main__buttons--products">Eliminar</button>
-                <a class="product--butt" href="/admin/">Cancelar</a>
+                <a class="product--butt" href="/admin">Cancelar</a>
             </div> 
         </form>
     </main>
