--- a/public/css/productAllAdmin.css
+++ b/public/css/productAllAdmin.css
@@ -54,4 +54,14 @@
     color: #819F54;
 }
 
+@media (min-width:490px) {
+    .product-detail {
+        display:flex;
+        width: 90%;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+}
 
