--- a/src/views/error404.ejs
+++ b/src/views/error404.ejs
@@ -14,7 +14,7 @@
         <div class="body__div--error404">
             <img  class="body__img--error404" src="/images/error404.svg" alt="error404">
             <h3>PAGE NOT FOUND</h3>
-            <a href="/" class="body--href">Ir pagina principal</a>
+            <a href="/" class="body--href">Pagina principal</a>
         </div>
     </main>
 </body>
