--- a/src/views/users/indexUsers.ejs
+++ b/src/views/users/indexUsers.ejs
@@ -15,8 +15,10 @@
     
     <%- include('../partials/header.ejs') %>
     <br>
-    <div class="body__div--error404">
-        <h1 style="text-align: center;">Registrado Exitosamente!!!</h1>
+    <div class="body__div--buyProduct">
+        <h2 style="text-align: center;">
+            <i class="fa-regular fa-circle-check" style="font-size: 40px; color: green;"></i> 
+            Registrado Exitosamente!!!</h2>
         <br>
         <a href="/" class="body--href">Ir pagina principal</a>
     </div>
