--- a/src/views/users/sinPermiso.ejs
+++ b/src/views/users/sinPermiso.ejs
@@ -16,10 +16,11 @@
     <%- include('../partials/headerReduce.ejs') %>
     <br>
     <div class="body__div--error404">
-        <h1 style="text-align: center;">--- Acceso Denegado ---</h1>
-        <h3 style="text-align: center;">Carece de credenciales de autenticación válidas para el recurso de destino.</h3>
+        <h2 style="text-align: center;">Acceso Denegado</h2>
         <br>
-        <a href="/" class="body--href">Ir pagina principal</a>
+        <h4 style="text-align: center;">Carece de credenciales de autenticación válidas para el recurso de destino.</h4>
+        <br>
+        <a href="/" class="body--href">Pagina principal</a>
     </div>
     <br>
     <%- include('../partials/footerReduce.ejs') %>
