--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -59,6 +59,10 @@
             <% } %>
         
             <br>
+            <div>
+                <input type="checkbox" id="cbox1" value="first_checkbox"> Estoy de acuerdo con <a href="#">Terminos y Condiciones</a>
+            </div>
+            <br>
 
             <div class="main--buttons">
                 <button class="main__buttons--register" type="submit" >Crear cuenta</button>
