--- a/public/css/index.css
+++ b/public/css/index.css
@@ -77,7 +77,7 @@
 .main__secction--article{
     align-self: stretch;
     margin: 9px;
-    border: solid 0.6px #344c2a;
+   /*  border: solid 0.6px #344c2a; */
     border-radius: 10px;
     transition: all 300ms;
 }
@@ -212,7 +212,7 @@
     padding-top: 15px;
 }
 .productRelacionado { 
-    background-color: #ececec;
+    /* background-color: #ececec; */
     border-radius: 40px; 
     margin-top: 30px;
 }
