admin-all-product-filter

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -44,7 +44,7 @@
                 <% if (locals.usuario) { %>
                     <figure class="figure--avatar">
                         <a href="http://localhost:3043/users/edit/<%=usuario.id%>"><img  class="header--avatar" src="/images/avatars/<%= usuario.image %>" alt="Mates"></a>
-                        <!-- <p class="header--users header--avatar"><%= usuario.name %></p> -->
+                        <p class="header--users header--avatar"><%= usuario.name %></p>
                     </figure>
                         <p class="burger--userName"><a style="font-weight: 600;" href="http://localhost:3043/users/edit/<%=usuario.name%>"><%=usuario.name%>  <%=usuario.lastName%></a></p>
                         
