--- a/public/css/productAllAdmin.css
+++ b/public/css/productAllAdmin.css
@@ -13,6 +13,19 @@
     text-align: center;
     border: 3px solid #344C2A;
 }
+.admin--th--href {
+    text-decoration: none; 
+    font-weight: 300;
+    color: white; 
+    padding: 4px;
+    border-radius: 12px; 
+    background-color: rgb(52, 76, 42, 0.9);
+    transition: all 150ms;
+}
+.admin--th--href:hover {
+    background-color: #819F54;
+}
+
 .admin--td, .admin__td--description{
     font-size: 13px;
     padding: 6px;
@@ -53,7 +66,36 @@
 .button__delete:hover{
     color: #819F54;
 }
+.main--title{
+    display:flex;
+    align-items: center;
+    margin-top: 30px;
+}
+.main__products--titular {
+    font-family: "Poppins", sans-serif;
+    font-size: 22px;
+    color:#1B1B1D;
+}
+.main__create--product--button {
+    display: inline-flex;
+    align-items: center;
+    padding: 9px 13px;
+    background-color: #344C2A;
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+    border-radius: 21px;
+    margin-left: 27px;
+    transition: all 100ms;
+}
 
+.main__create--product--button i {
+    margin-right: 10px;
+    font-size: 21px;
+}
+.main__create--product--button:hover {
+    background-color: #819F54;
+}
 @media (min-width:490px) {
     .product-detail {
         display:flex;
@@ -65,3 +107,11 @@
     }
 }
 
+@media (min-width:1200px) {
+    .main--title {
+        max-width: 1110px;
+        margin: auto; 
+        margin-top: 30px;
+    }
+
+}
