--- a/src/views/products/productAllAdmin.ejs
+++ b/src/views/products/productAllAdmin.ejs
@@ -47,7 +47,7 @@
 						</a>
 					</th>
 					<th class="admin--th">
-						<a class="admin--th--href" href="/admin/index?orderBy=stocko&orderDirection=<%= orderDirection === 'ASC' ? 'DESC' : 'ASC' %>">
+						<a class="admin--th--href" href="/admin/index?orderBy=stock&orderDirection=<%= orderDirection === 'ASC' ? 'DESC' : 'ASC' %>">
 						<%= orderDirection === 'ASC' ? 'Stock↑' : 'Stock↓' %>
 						</a>
 					</th>
