product-all-ofer

--- a/src/views/products/productAll.ejs
+++ b/src/views/products/productAll.ejs
@@ -16,9 +16,12 @@
         <!-- Todos los productos -->
 		<h3 class="main__products--titulares">Todos los productos</h3>
 
-		<div class="main--div">
-			<% productos.forEach ((product)=>{ %>
-				<section class="product-box">
+		<div class="main--div--all">
+			<!-- Ordenar aleatoriamente los productos -->
+			<% const aleatorioProduct = productos.sort(() => 0.5 - Math.random()) %>
+
+			<% aleatorioProduct.forEach ((product)=>{ %>
+				<section class="product-box--all">
 				<a class="product--href" href="productDetail/<%=product.id%>">
 					<figure class="product-box_image">
 						<% for( let i = 0; i < product.producto.length; i++ ) { %>
