--- a/public/css/productCreate.css
+++ b/public/css/productCreate.css
@@ -27,6 +27,9 @@
     text-align: center;
     list-style: none;
 }
+.product--butt:hover {
+    background-color: #819F54;
+}
 
 .main__buttons--products {
     width: 100%;
@@ -38,6 +41,9 @@
     color: white;
     margin-bottom: 20px;
     margin-top: 20px;
+}
+.main__buttons--products:hover {
+    background-color: #819F54;
 }
 
 /* Validaciones front end*/
