--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -32,6 +32,9 @@
     color: white;
     margin-bottom: 20px;
 }
+.main__buttons--register:hover {
+    background-color: #819F54;
+}
 .main__register--titulares {
     font-family: "Poppins", sans-serif;
     font-size: 20px;
@@ -63,6 +66,9 @@
     color: white;
     text-align: center;
     list-style: none;
+}
+.register__cancel--butt:hover {
+    background-color: #819F54;
 }
 .main--buttons{
     display:flex;
