--- a/public/css/register.css
+++ b/public/css/register.css
@@ -29,6 +29,9 @@
     color: white;
     margin-bottom: 20px;
 }
+.main__buttons--register:hover {
+    background-color: #819F54;
+}
 .main__register--titulares {
     font-family: "Poppins", sans-serif;
     font-size: 20px;
@@ -60,6 +63,9 @@
     color: white;
     text-align: center;
     list-style: none;
+}
+.register__cancel--butt:hover {
+    background-color: #819F54;
 }
 .main--buttons{
     display:flex;
