--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,8 @@
 </head>
 <body>
     <%- include('./partials/header.ejs') %>
-   
+    <%- include('./partials/iconWhatsapp.ejs') %>
+    
     <main class="main--home"  id="main">
         
         <div class="banner--slides">
