--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -9,6 +9,7 @@
 
 <body>
     <%- include('../partials/header.ejs') %>
+    <%- include('../partials/iconWhatsapp.ejs') %>
    
     <main class="main--form">
         <div class="product-detail">
