--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -4,9 +4,11 @@
     <%- include('../partials/head.ejs') %>
     <title>Carrito de Compras</title>
     <link rel="stylesheet" href="/css/productCart.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
     <%- include('../partials/header.ejs') %>
+    <%- include('../partials/iconWhatsapp.ejs') %>
     
     <main>
         <section class="main__section">
