--- a/src/views/products/productSearch.ejs
+++ b/src/views/products/productSearch.ejs
@@ -11,14 +11,15 @@
 
 <body>
     <%- include('../partials/header.ejs') %>
+	<%- include('../partials/iconWhatsapp.ejs') %>
     
     <main class="main--form">
 		<section class="main--section">
             <h3 class="main--titulares">Resultado Busqueda</h3>
 			<% if (productos.length > 0) { %>  
-			<div class="main--div">
+			<div class="main--div--all">
 				<% productos.forEach ((product)=>{ %>
-					<section class="product-box">
+					<section class="product-box--all">
 					<a class="product--href" href="productDetail/<%=product.id%>">
 						<figure class="product-box_image">
 							<% for( let i = 0; i < 1; i++ ) { %>
