--- a/public/css/index.css
+++ b/public/css/index.css
@@ -190,6 +190,7 @@
 }
 .section__article--descripcion {
     font-size: 15px;
+    text-align: center;
     font-weight: bold;
     color:#666;
     padding: 0 10px 10px 10px;
@@ -240,6 +241,79 @@
     width: 60px;  /* tamaño según tus necesidades */
     height: 60px;
 }
+
+/* estilo de parte de filtrado */
+.main--filter--products {
+    max-width: 1200px;
+    display: flex;
+    margin: 0 auto;
+}
+.filter--form {
+    border-radius: 6px;
+    max-width: 600px;
+    margin-top: 40px;
+    margin-right: 15px;
+}
+
+.form--label {
+    font-size: 15px;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.form--select,
+.form--input {
+    font-size: 13px;
+    margin-top: 5px;
+    padding: 10px;
+    margin-bottom: 21px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.form--button {
+    margin: 20px;
+    padding: 10px 20px;
+    background-color: #819F54;
+    color: #fff;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
+.form--button:hover {
+    background-color:#344C2A;
+}
+
+/* Product list styles */
+.product-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.product-item {
+    background-color: #fff;
+    margin: 10px auto;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+}
+
+.product-name {
+    margin: 0 0 10px 0;
+    font-size: 1.2em;
+    color: #333;
+}
+
+.product-price,
+.product-category {
+    margin: 5px 0;
+    color: #666;
+}
+
 /* Media Query */
 @media(min-width:490px) {
     .main__section--articleSend:hover {
