validaciones de front para login

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -61,3 +61,11 @@
     align-items: center;
     justify-content: center;
   }
+
+.erroresEmail, .erroresPassword{
+    margin-top: -10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    color: red; 
+    font-size: 12px;
+}
