--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -13,16 +13,18 @@
             <p class="main__login--titulares">Iniciar sesión</p>
             
             <p class="main__input--desc">Correo electrónico</p>
-            <input class="main__form--inputs" type="email" name="userEmail" value="<%= locals.old && old.userEmail %>" placeholder="Email de Usuari@">
+            <input class="main__form--inputs email" type="email" name="email" value="<%= locals.old && old.userEmail %>" placeholder="Email de Usuari@">
             <% if (locals.errors && errors.userEmail) { %>
                 <li class= "input--error"><%= errors.userEmail.msg %></li>
             <% } %>
+            <div class="erroresEmail"><ul></ul></div>
            
             <p class="main__input--desc">Contraseña</p>
-            <input class="main__form--inputs" type="password" name="passwordUser" value="" placeholder="Contraseña">
+            <input class="main__form--inputs password" type="password" name="password" value="" placeholder="Contraseña">
             <% if (locals.errors && errors.passwordUser) { %>
                 <li class= "input--error"><%= errors.passwordUser.msg %></li>
             <% } %>
+            <div class="erroresPassword"><ul></ul></div>
 
             <input class="main__input--desc" type="checkbox" name="rememberUsers">Recordar sesión
             
@@ -36,5 +38,7 @@
     </main>
 
     <%- include('../partials/footerReduce.ejs') %>  %>
+
+    <script src="/scripts/userLogin.js"></script>
 </body>
 </html>
