--- a/public/css/index.css
+++ b/public/css/index.css
@@ -221,6 +221,7 @@
     height: 9rem; 
 }
 
+/* icono whatsapp */ 
 .icon--whatsapp {
     position: fixed;
     bottom: 40px; /* distancia borde inferior */
@@ -230,12 +231,13 @@
     z-index: 1000; /* Asegura que el ícono esté sobre otros elementos */
     transition: all 150ms;
 }
-
 .icon--whatsapp--img {
     width: 100%;
     height: 100%;
     display: block;
     cursor: pointer; /* Cambia el cursor al pasar sobre el ícono */
+    border-radius: 30px;
+    box-shadow: 0px 0px 9px rgba(5, 171, 168, 1); /* sombra del icono */
 }
 .icon--whatsapp:hover {
     width: 60px;  /* tamaño según tus necesidades */
@@ -254,13 +256,11 @@
     margin-top: 40px;
     margin-right: 15px;
 }
-
 .form--label {
     font-size: 15px;
     margin-top: 10px;
     font-weight: bold;
 }
-
 .form--select,
 .form--input {
     font-size: 13px;
@@ -272,7 +272,6 @@
     width: 100%;
     box-sizing: border-box;
 }
-
 .form--button {
     margin: 20px;
     padding: 10px 20px;
@@ -282,7 +281,6 @@
     border-radius: 7px;
     cursor: pointer;
 }
-
 .form--button:hover {
     background-color:#344C2A;
 }
@@ -292,7 +290,6 @@
     list-style-type: none;
     padding: 0;
 }
-
 .product-item {
     background-color: #fff;
     margin: 10px auto;
@@ -301,13 +298,11 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 600px;
 }
-
 .product-name {
     margin: 0 0 10px 0;
     font-size: 1.2em;
     color: #333;
 }
-
 .product-price,
 .product-category {
     margin: 5px 0;
