--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -609,6 +609,44 @@
     margin-top: 18px;    
 }
 
+/* desplegable categorias */
+.nav--option .header__nav--option .nav--category .nav__option--category {
+    background-color: inherit;
+    border: none;
+    outline: none;
+    margin: 0;
+}
+
+.nav--option .header__nav--option .nav__option--category--content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.nav--option .header__nav--option .nav__option--category--content li {
+    float: none;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.nav--option .header__nav--option .nav__option--category--content li a {
+    color: black;
+    text-decoration: none;
+}
+
+.nav--option .header__nav--option .nav__option--category--content li:hover {
+    background-color: #ECECEC;
+}
+
+.nav--option .header__nav--option .nav--category:hover .nav__option--category--content {
+    display: block;
+}
+
 /* Media Query */
 @media screen and (max-width:490px) {
     .product-detail {
