--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -622,13 +622,14 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
+    border-radius: 6px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .nav--option .header__nav--option .nav__option--category--content li {
     float: none;
-    padding: 12px 16px;
+    padding: 10px 10px;
     text-decoration: none;
     display: block;
     text-align: left;
@@ -642,6 +643,7 @@
 .nav--option .header__nav--option .nav__option--category--content li:hover {
     background-color: #ECECEC;
     font-weight: 600;
+    border-radius: 10px;
 }
 
 .nav--option .header__nav--option .nav--category:hover .nav__option--category--content {
