--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -76,7 +76,7 @@
     </main>
     
     <%- include('../partials/footerReduce.ejs') %>  %>
-
+    <script src="/scripts/usersRegister.js"></script>
             
 </body>
 </html> 
