--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -42,7 +42,7 @@
         </section>    
 
         <div class="banner--slides">
-            <img class="banner--slide" id="slider1" src="/images/slides/slide1.jpg">
+            <img class="banner--slide2" id="slider1" src="/images/slides/slide1.jpg">
         </div>
 
         <section class="main--section">
